src/util/vred/y.output
Terminaux inutilisés dans la grammaire

   TK_TOR_SIZE
   TK_TOR_SIZE2
   TK_EMISSION


Grammaire

    0 $accept: start $end

    1 start: solid TK_END

    2 solid: solid_single
    3      | solid solid_single

    4 solid_single: wall_section
    5             | gate_section
    6             | earth_section
    7             | web_section
    8             | board_section
    9             | step_section
   10             | host_section
   11             | doc_section

   12 wall_section: TK_WALL wall

   13 wall: wall_single
   14     | wall wall_single

   15 wall_single: pos_ang box_props

   16 gate_section: TK_GATE gate

   17 gate: gate_single
   18     | gate gate_single

   19 gate_single: pos_ang STRING STRING box_props

   20 earth_section: TK_EARTH earth

   21 earth: earth_single
   22      | earth earth_single

   23 earth_single: pos_ang spher_props

   24 web_section: TK_WEB web

   25 web: web_single
   26    | web web_single

   27 web_single: pos_ang STRING box_props

   28 board_section: TK_BOARD board

   29 board: board_single
   30      | board board_single

   31 board_single: pos_ang box_props

   32 step_section: TK_STEP step

   33 step: step_single
   34     | step step_single

   35 step_single: pos_ang box_props

   36 host_section: TK_HOST host

   37 host: host_single
   38     | host host_single

   39 host_single: pos_ang TLNT box_props

   40 doc_section: TK_DOC doc

   41 doc: doc_single
   42    | doc doc_single

   43 doc_single: pos_ang STRING box_props

   44 box_props: box_size COMMA box_tex COMMA app
   45          | box_size COMMA box_tex
   46          | box_size COMMA app
   47          | box_size

   48 spher_props: spher_size
   49            | spher_size COMMA SPHER_TEX
   50            | spher_size COMMA app
   51            | spher_size COMMA SPHER_TEX COMMA app

   52 pos_ang: NUMBER NUMBER NUMBER NUMBER NUMBER

   53 box_size: TK_BOX_SIZE NUMBER COMMA NUMBER COMMA NUMBER

   54 spher_size: TK_SPHER_SIZE NUMBER

   55 box_tex: box_tex_single
   56        | box_tex COMMA box_tex_single

   57 box_tex_single: TEX_XP
   58               | TEX_XN
   59               | TEX_YP
   60               | TEX_YN
   61               | TEX_ZP
   62               | TEX_ZN

   63 app: app_single
   64    | app COMMA app_single

   65 app_single: TK_AMBIENT COMMA NUMBER COMMA NUMBER
   66           | TK_DIFFUSE COMMA NUMBER COMMA NUMBER
   67           | TK_SHININESS COMMA NUMBER COMMA NUMBER
   68           | TK_SPECULAR COMMA NUMBER COMMA NUMBER


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
COMMA (258) 44 45 46 49 50 51 53 56 64 65 66 67 68
NUMBER (259) 52 53 54 65 66 67 68
STRING (260) 19 27 43
TK_WALL (261) 12
TK_GATE (262) 16
TK_EARTH (263) 20
TK_WEB (264) 24
TK_BOARD (265) 28
TK_STEP (266) 32
TK_HOST (267) 36
TK_DOC (268) 40
TK_END (269) 1
TK_BOX_SIZE (270) 53
TK_SPHER_SIZE (271) 54
TK_TOR_SIZE (272)
TK_TOR_SIZE2 (273)
TK_DIFFUSE (274) 66
TK_AMBIENT (275) 65
TK_SPECULAR (276) 68
TK_EMISSION (277)
TK_SHININESS (278) 67
TEX_XP (279) 57
TEX_YP (280) 59
TEX_ZP (281) 61
TEX_XN (282) 58
TEX_YN (283) 60
TEX_ZN (284) 62
SPHER_TEX (285) 49 51
TLNT (286) 39


Non-terminaux, suivis des règles où ils apparaissent

$accept (32)
    à gauche: 0
start (33)
    à gauche: 1, à droite: 0
solid (34)
    à gauche: 2 3, à droite: 1 3
solid_single (35)
    à gauche: 4 5 6 7 8 9 10 11, à droite: 2 3
wall_section (36)
    à gauche: 12, à droite: 4
wall (37)
    à gauche: 13 14, à droite: 12 14
wall_single (38)
    à gauche: 15, à droite: 13 14
gate_section (39)
    à gauche: 16, à droite: 5
gate (40)
    à gauche: 17 18, à droite: 16 18
gate_single (41)
    à gauche: 19, à droite: 17 18
earth_section (42)
    à gauche: 20, à droite: 6
earth (43)
    à gauche: 21 22, à droite: 20 22
earth_single (44)
    à gauche: 23, à droite: 21 22
web_section (45)
    à gauche: 24, à droite: 7
web (46)
    à gauche: 25 26, à droite: 24 26
web_single (47)
    à gauche: 27, à droite: 25 26
board_section (48)
    à gauche: 28, à droite: 8
board (49)
    à gauche: 29 30, à droite: 28 30
board_single (50)
    à gauche: 31, à droite: 29 30
step_section (51)
    à gauche: 32, à droite: 9
step (52)
    à gauche: 33 34, à droite: 32 34
step_single (53)
    à gauche: 35, à droite: 33 34
host_section (54)
    à gauche: 36, à droite: 10
host (55)
    à gauche: 37 38, à droite: 36 38
host_single (56)
    à gauche: 39, à droite: 37 38
doc_section (57)
    à gauche: 40, à droite: 11
doc (58)
    à gauche: 41 42, à droite: 40 42
doc_single (59)
    à gauche: 43, à droite: 41 42
box_props (60)
    à gauche: 44 45 46 47, à droite: 15 19 27 31 35 39 43
spher_props (61)
    à gauche: 48 49 50 51, à droite: 23
pos_ang (62)
    à gauche: 52, à droite: 15 19 23 27 31 35 39 43
box_size (63)
    à gauche: 53, à droite: 44 45 46 47
spher_size (64)
    à gauche: 54, à droite: 48 49 50 51
box_tex (65)
    à gauche: 55 56, à droite: 44 45 56
box_tex_single (66)
    à gauche: 57 58 59 60 61 62, à droite: 55 56
app (67)
    à gauche: 63 64, à droite: 44 46 50 51 64
app_single (68)
    à gauche: 65 66 67 68, à droite: 63 64


État 0

    0 $accept: . start $end

    TK_WALL   décalage et aller à l'état 1
    TK_GATE   décalage et aller à l'état 2
    TK_EARTH  décalage et aller à l'état 3
    TK_WEB    décalage et aller à l'état 4
    TK_BOARD  décalage et aller à l'état 5
    TK_STEP   décalage et aller à l'état 6
    TK_HOST   décalage et aller à l'état 7
    TK_DOC    décalage et aller à l'état 8

    start          aller à l'état 9
    solid          aller à l'état 10
    solid_single   aller à l'état 11
    wall_section   aller à l'état 12
    gate_section   aller à l'état 13
    earth_section  aller à l'état 14
    web_section    aller à l'état 15
    board_section  aller à l'état 16
    step_section   aller à l'état 17
    host_section   aller à l'état 18
    doc_section    aller à l'état 19


État 1

   12 wall_section: TK_WALL . wall

    NUMBER  décalage et aller à l'état 20

    wall         aller à l'état 21
    wall_single  aller à l'état 22
    pos_ang      aller à l'état 23


État 2

   16 gate_section: TK_GATE . gate

    NUMBER  décalage et aller à l'état 20

    gate         aller à l'état 24
    gate_single  aller à l'état 25
    pos_ang      aller à l'état 26


État 3

   20 earth_section: TK_EARTH . earth

    NUMBER  décalage et aller à l'état 20

    earth         aller à l'état 27
    earth_single  aller à l'état 28
    pos_ang       aller à l'état 29


État 4

   24 web_section: TK_WEB . web

    NUMBER  décalage et aller à l'état 20

    web         aller à l'état 30
    web_single  aller à l'état 31
    pos_ang     aller à l'état 32


État 5

   28 board_section: TK_BOARD . board

    NUMBER  décalage et aller à l'état 20

    board         aller à l'état 33
    board_single  aller à l'état 34
    pos_ang       aller à l'état 35


État 6

   32 step_section: TK_STEP . step

    NUMBER  décalage et aller à l'état 20

    step         aller à l'état 36
    step_single  aller à l'état 37
    pos_ang      aller à l'état 38


État 7

   36 host_section: TK_HOST . host

    NUMBER  décalage et aller à l'état 20

    host         aller à l'état 39
    host_single  aller à l'état 40
    pos_ang      aller à l'état 41


État 8

   40 doc_section: TK_DOC . doc

    NUMBER  décalage et aller à l'état 20

    doc         aller à l'état 42
    doc_single  aller à l'état 43
    pos_ang     aller à l'état 44


État 9

    0 $accept: start . $end

    $end  décalage et aller à l'état 45


État 10

    1 start: solid . TK_END
    3 solid: solid . solid_single

    TK_WALL   décalage et aller à l'état 1
    TK_GATE   décalage et aller à l'état 2
    TK_EARTH  décalage et aller à l'état 3
    TK_WEB    décalage et aller à l'état 4
    TK_BOARD  décalage et aller à l'état 5
    TK_STEP   décalage et aller à l'état 6
    TK_HOST   décalage et aller à l'état 7
    TK_DOC    décalage et aller à l'état 8
    TK_END    décalage et aller à l'état 46

    solid_single   aller à l'état 47
    wall_section   aller à l'état 12
    gate_section   aller à l'état 13
    earth_section  aller à l'état 14
    web_section    aller à l'état 15
    board_section  aller à l'état 16
    step_section   aller à l'état 17
    host_section   aller à l'état 18
    doc_section    aller à l'état 19


État 11

    2 solid: solid_single .

    $défaut  réduction par utilisation de la règle 2 (solid)


État 12

    4 solid_single: wall_section .

    $défaut  réduction par utilisation de la règle 4 (solid_single)


État 13

    5 solid_single: gate_section .

    $défaut  réduction par utilisation de la règle 5 (solid_single)


État 14

    6 solid_single: earth_section .

    $défaut  réduction par utilisation de la règle 6 (solid_single)


État 15

    7 solid_single: web_section .

    $défaut  réduction par utilisation de la règle 7 (solid_single)


État 16

    8 solid_single: board_section .

    $défaut  réduction par utilisation de la règle 8 (solid_single)


État 17

    9 solid_single: step_section .

    $défaut  réduction par utilisation de la règle 9 (solid_single)


État 18

   10 solid_single: host_section .

    $défaut  réduction par utilisation de la règle 10 (solid_single)


État 19

   11 solid_single: doc_section .

    $défaut  réduction par utilisation de la règle 11 (solid_single)


État 20

   52 pos_ang: NUMBER . NUMBER NUMBER NUMBER NUMBER

    NUMBER  décalage et aller à l'état 48


État 21

   12 wall_section: TK_WALL wall .
   14 wall: wall . wall_single

    NUMBER  décalage et aller à l'état 20

    $défaut  réduction par utilisation de la règle 12 (wall_section)

    wall_single  aller à l'état 49
    pos_ang      aller à l'état 23


État 22

   13 wall: wall_single .

    $défaut  réduction par utilisation de la règle 13 (wall)


État 23

   15 wall_single: pos_ang . box_props

    TK_BOX_SIZE  décalage et aller à l'état 50

    box_props  aller à l'état 51
    box_size   aller à l'état 52


État 24

   16 gate_section: TK_GATE gate .
   18 gate: gate . gate_single

    NUMBER  décalage et aller à l'état 20

    $défaut  réduction par utilisation de la règle 16 (gate_section)

    gate_single  aller à l'état 53
    pos_ang      aller à l'état 26


État 25

   17 gate: gate_single .

    $défaut  réduction par utilisation de la règle 17 (gate)


État 26

   19 gate_single: pos_ang . STRING STRING box_props

    STRING  décalage et aller à l'état 54


État 27

   20 earth_section: TK_EARTH earth .
   22 earth: earth . earth_single

    NUMBER  décalage et aller à l'état 20

    $défaut  réduction par utilisation de la règle 20 (earth_section)

    earth_single  aller à l'état 55
    pos_ang       aller à l'état 29


État 28

   21 earth: earth_single .

    $défaut  réduction par utilisation de la règle 21 (earth)


État 29

   23 earth_single: pos_ang . spher_props

    TK_SPHER_SIZE  décalage et aller à l'état 56

    spher_props  aller à l'état 57
    spher_size   aller à l'état 58


État 30

   24 web_section: TK_WEB web .
   26 web: web . web_single

    NUMBER  décalage et aller à l'état 20

    $défaut  réduction par utilisation de la règle 24 (web_section)

    web_single  aller à l'état 59
    pos_ang     aller à l'état 32


État 31

   25 web: web_single .

    $défaut  réduction par utilisation de la règle 25 (web)


État 32

   27 web_single: pos_ang . STRING box_props

    STRING  décalage et aller à l'état 60


État 33

   28 board_section: TK_BOARD board .
   30 board: board . board_single

    NUMBER  décalage et aller à l'état 20

    $défaut  réduction par utilisation de la règle 28 (board_section)

    board_single  aller à l'état 61
    pos_ang       aller à l'état 35


État 34

   29 board: board_single .

    $défaut  réduction par utilisation de la règle 29 (board)


État 35

   31 board_single: pos_ang . box_props

    TK_BOX_SIZE  décalage et aller à l'état 50

    box_props  aller à l'état 62
    box_size   aller à l'état 52


État 36

   32 step_section: TK_STEP step .
   34 step: step . step_single

    NUMBER  décalage et aller à l'état 20

    $défaut  réduction par utilisation de la règle 32 (step_section)

    step_single  aller à l'état 63
    pos_ang      aller à l'état 38


État 37

   33 step: step_single .

    $défaut  réduction par utilisation de la règle 33 (step)


État 38

   35 step_single: pos_ang . box_props

    TK_BOX_SIZE  décalage et aller à l'état 50

    box_props  aller à l'état 64
    box_size   aller à l'état 52


État 39

   36 host_section: TK_HOST host .
   38 host: host . host_single

    NUMBER  décalage et aller à l'état 20

    $défaut  réduction par utilisation de la règle 36 (host_section)

    host_single  aller à l'état 65
    pos_ang      aller à l'état 41


État 40

   37 host: host_single .

    $défaut  réduction par utilisation de la règle 37 (host)


État 41

   39 host_single: pos_ang . TLNT box_props

    TLNT  décalage et aller à l'état 66


État 42

   40 doc_section: TK_DOC doc .
   42 doc: doc . doc_single

    NUMBER  décalage et aller à l'état 20

    $défaut  réduction par utilisation de la règle 40 (doc_section)

    doc_single  aller à l'état 67
    pos_ang     aller à l'état 44


État 43

   41 doc: doc_single .

    $défaut  réduction par utilisation de la règle 41 (doc)


État 44

   43 doc_single: pos_ang . STRING box_props

    STRING  décalage et aller à l'état 68


État 45

    0 $accept: start $end .

    $défaut  accepter


État 46

    1 start: solid TK_END .

    $défaut  réduction par utilisation de la règle 1 (start)


État 47

    3 solid: solid solid_single .

    $défaut  réduction par utilisation de la règle 3 (solid)


État 48

   52 pos_ang: NUMBER NUMBER . NUMBER NUMBER NUMBER

    NUMBER  décalage et aller à l'état 69


État 49

   14 wall: wall wall_single .

    $défaut  réduction par utilisation de la règle 14 (wall)


État 50

   53 box_size: TK_BOX_SIZE . NUMBER COMMA NUMBER COMMA NUMBER

    NUMBER  décalage et aller à l'état 70


État 51

   15 wall_single: pos_ang box_props .

    $défaut  réduction par utilisation de la règle 15 (wall_single)


État 52

   44 box_props: box_size . COMMA box_tex COMMA app
   45          | box_size . COMMA box_tex
   46          | box_size . COMMA app
   47          | box_size .

    COMMA  décalage et aller à l'état 71

    $défaut  réduction par utilisation de la règle 47 (box_props)


État 53

   18 gate: gate gate_single .

    $défaut  réduction par utilisation de la règle 18 (gate)


État 54

   19 gate_single: pos_ang STRING . STRING box_props

    STRING  décalage et aller à l'état 72


État 55

   22 earth: earth earth_single .

    $défaut  réduction par utilisation de la règle 22 (earth)


État 56

   54 spher_size: TK_SPHER_SIZE . NUMBER

    NUMBER  décalage et aller à l'état 73


État 57

   23 earth_single: pos_ang spher_props .

    $défaut  réduction par utilisation de la règle 23 (earth_single)


État 58

   48 spher_props: spher_size .
   49            | spher_size . COMMA SPHER_TEX
   50            | spher_size . COMMA app
   51            | spher_size . COMMA SPHER_TEX COMMA app

    COMMA  décalage et aller à l'état 74

    $défaut  réduction par utilisation de la règle 48 (spher_props)


État 59

   26 web: web web_single .

    $défaut  réduction par utilisation de la règle 26 (web)


État 60

   27 web_single: pos_ang STRING . box_props

    TK_BOX_SIZE  décalage et aller à l'état 50

    box_props  aller à l'état 75
    box_size   aller à l'état 52


État 61

   30 board: board board_single .

    $défaut  réduction par utilisation de la règle 30 (board)


État 62

   31 board_single: pos_ang box_props .

    $défaut  réduction par utilisation de la règle 31 (board_single)


État 63

   34 step: step step_single .

    $défaut  réduction par utilisation de la règle 34 (step)


État 64

   35 step_single: pos_ang box_props .

    $défaut  réduction par utilisation de la règle 35 (step_single)


État 65

   38 host: host host_single .

    $défaut  réduction par utilisation de la règle 38 (host)


État 66

   39 host_single: pos_ang TLNT . box_props

    TK_BOX_SIZE  décalage et aller à l'état 50

    box_props  aller à l'état 76
    box_size   aller à l'état 52


État 67

   42 doc: doc doc_single .

    $défaut  réduction par utilisation de la règle 42 (doc)


État 68

   43 doc_single: pos_ang STRING . box_props

    TK_BOX_SIZE  décalage et aller à l'état 50

    box_props  aller à l'état 77
    box_size   aller à l'état 52


État 69

   52 pos_ang: NUMBER NUMBER NUMBER . NUMBER NUMBER

    NUMBER  décalage et aller à l'état 78


État 70

   53 box_size: TK_BOX_SIZE NUMBER . COMMA NUMBER COMMA NUMBER

    COMMA  décalage et aller à l'état 79


État 71

   44 box_props: box_size COMMA . box_tex COMMA app
   45          | box_size COMMA . box_tex
   46          | box_size COMMA . app

    TK_DIFFUSE    décalage et aller à l'état 80
    TK_AMBIENT    décalage et aller à l'état 81
    TK_SPECULAR   décalage et aller à l'état 82
    TK_SHININESS  décalage et aller à l'état 83
    TEX_XP        décalage et aller à l'état 84
    TEX_YP        décalage et aller à l'état 85
    TEX_ZP        décalage et aller à l'état 86
    TEX_XN        décalage et aller à l'état 87
    TEX_YN        décalage et aller à l'état 88
    TEX_ZN        décalage et aller à l'état 89

    box_tex         aller à l'état 90
    box_tex_single  aller à l'état 91
    app             aller à l'état 92
    app_single      aller à l'état 93


État 72

   19 gate_single: pos_ang STRING STRING . box_props

    TK_BOX_SIZE  décalage et aller à l'état 50

    box_props  aller à l'état 94
    box_size   aller à l'état 52


État 73

   54 spher_size: TK_SPHER_SIZE NUMBER .

    $défaut  réduction par utilisation de la règle 54 (spher_size)


État 74

   49 spher_props: spher_size COMMA . SPHER_TEX
   50            | spher_size COMMA . app
   51            | spher_size COMMA . SPHER_TEX COMMA app

    TK_DIFFUSE    décalage et aller à l'état 80
    TK_AMBIENT    décalage et aller à l'état 81
    TK_SPECULAR   décalage et aller à l'état 82
    TK_SHININESS  décalage et aller à l'état 83
    SPHER_TEX     décalage et aller à l'état 95

    app         aller à l'état 96
    app_single  aller à l'état 93


État 75

   27 web_single: pos_ang STRING box_props .

    $défaut  réduction par utilisation de la règle 27 (web_single)


État 76

   39 host_single: pos_ang TLNT box_props .

    $défaut  réduction par utilisation de la règle 39 (host_single)


État 77
